# testGit

./: ADMM.cpp  ADMM.h  ADMMFunc.cpp  ADMMFunc.h  CMakeLists.txt  ColumnPool.cpp  ColumnPool.h  Constraints.cpp  Constraints.h  Cplex.hpp  DUALblock.h  DW.cpp  DW.h  Dection.hpp  FP.cpp  FP.h  GMI.hpp  GeneralBlock.cpp  GeneralBlock.h  Global.cpp  Global.h  HYPEm.hpp  Hypergraph.cpp  LagRangian.cpp  LagRangian.h  Lagrangean.cpp  Lagrangean.h  Lifting.hpp  MIR.hpp  MasterProb.cpp  MasterProb.h  Node.cpp  Node.h  Objective.cpp  Objective.h  Parallelfuncs.hpp  Parsing.cpp  Parsing.hpp  Partition.hpp  Partitioning.cpp  (+30 more)
hypergraphpartition/: Dection.hpp  HYPEHypergraph.cpp  HYPEHypergraph.hpp  HYPEm.hpp  LocalBranch.hpp  Minipartplus5.hpp  Parsing.cpp  Parsing.hpp  Partition.cpp  Partitioning.cpp  Partitioning.hpp  SSet.cpp  SSet.hpp  blackbox_optimizer.hpp  common.hpp  hypergraph.hpp  incremental_objective.hpp  linear.hpp  local_search_optimizer.hpp  move.hpp  objective.hpp  partitioning_params.hpp  primalBlock.hpp  solution.hpp
